--- a/public/style.css
+++ b/public/style.css
@@ -24,11 +24,26 @@ body header nav ul li a {
 }
 body main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+body main div.alert-danger {
+  margin-bottom: -100px;
+  margin-top: 100px;
+  color: red;
+  font-size: 1.3rem;
 }
 body main form#create-issue {
   display: flex;
   flex-direction: column;
   width: 50%;
   margin-top: 100px;
+}
+body main form#create-issue label {
+  margin-top: 10px;
+  color: rgb(109, 112, 131);
+}
+body main form#create-issue button {
+  padding: 10px 30px;
+  margin: 20px auto 0;
 }/*# sourceMappingURL=style.css.map */
