--- a/public/style.scss
+++ b/public/style.scss
@@ -27,12 +27,27 @@ body {
   }
   main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    div.alert-danger {
+      margin-bottom: -100px;
+      margin-top: 100px;
+      color: red;
+      font-size: 1.3rem;
+    }
     form#create-issue {
       display: flex;
       flex-direction: column;
       width: 50%;
       margin-top: 100px;
+      label {
+        margin-top: 10px;
+        color: rgb(109, 112, 131);
+      }
+      button {
+        padding: 10px 30px;
+        margin: 20px auto 0;
+      }
     }
   }
 }
