--- a/public/style.css
+++ b/public/style.css
@@ -6,12 +6,16 @@
 }
 
 body {
-  background-color: rgb(45, 45, 58);
+  background-color: rgb(45, 45, 49);
 }
 body header {
+  margin-top: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+body header div h1 {
+  color: white;
 }
 body header nav ul {
   display: flex;
@@ -27,6 +31,23 @@ body main {
   flex-direction: column;
   align-items: center;
 }
+body main table.issues {
+  margin: 20px 0;
+  color: white;
+  border-collapse: collapse;
+}
+body main table.issues th,
+body main table.issues td {
+  border: 1px solid #616161;
+  padding: 10px;
+}
+body main table.issues th {
+  background-color: #494949;
+}
+body main table.issues a {
+  color: rgb(95, 131, 252);
+  text-decoration: none;
+}
 body main div.alert-danger {
   margin-bottom: -100px;
   margin-top: 100px;
@@ -34,16 +55,34 @@ body main div.alert-danger {
   font-size: 1.3rem;
 }
 body main form#create-issue {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  margin-top: 100px;
+  margin-top: 20px;
+  color: white;
 }
 body main form#create-issue label {
-  margin-top: 10px;
-  color: rgb(109, 112, 131);
+  display: block;
+  margin-bottom: 5px;
 }
-body main form#create-issue button {
-  padding: 10px 30px;
-  margin: 20px auto 0;
+body main form#create-issue input[type=text],
+body main form#create-issue textarea,
+body main form#create-issue select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #616161;
+  background-color: #424242;
+  color: white;
+}
+body main form#create-issue textarea {
+  resize: vertical;
+}
+body main form#create-issue button[type=submit] {
+  width: auto;
+  background-color: #494949;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+body main form#create-issue button[type=submit]:hover {
+  background-color: #616161;
 }/*# sourceMappingURL=style.css.map */
