--- a/public/style.css
+++ b/public/style.css
@@ -7,12 +7,16 @@
 
 body {
   background-color: rgb(45, 45, 49);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 body header {
   margin-top: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  min-width: 1000px;
 }
 body header div h1 {
   color: white;
@@ -30,6 +34,7 @@ body main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1000px;
 }
 body main table.issues {
   margin: 20px 0;
@@ -66,22 +71,32 @@ body main h2.issue-priority {
   align-self: flex-start;
   margin: 40px 10px 0 10px;
   color: white;
+  font-weight: 100;
 }
 body main div.issue-wrapper {
   margin: 10px 10px 10px 10px;
   padding: 10px;
   border: 1px solid #616161;
 }
+body main div.issue-wrapper p.issue-added-on {
+  color: #858585;
+  font-style: italic;
+  margin-top: 20px;
+}
 body main div.issue-wrapper h3.issue-title {
+  text-align: center;
   color: white;
   font-size: 2rem;
-  font-weight: 200;
+  font-weight: 600;
   margin: 0 0 10px 0;
 }
 body main div.issue-wrapper p.issue-description {
   color: white;
   font-size: 1.3rem;
   line-height: 1.5;
+}
+body main form.close-issue-form button.close-issue {
+  padding: 10px 20px;
 }
 body main div.alert-danger {
   margin-bottom: -100px;
