--- a/public/style.scss
+++ b/public/style.scss
@@ -7,11 +7,15 @@
 
 body {
   background-color: rgb(45, 45, 49);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   header {
     margin-top: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    min-width: 1000px;
     div {
       h1 {
         color: white;
@@ -35,6 +39,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1000px;
     table.issues {
       margin: 20px 0;
       color: white;
@@ -72,21 +77,33 @@ body {
       align-self: flex-start;
       margin: 40px 10px 0 10px;
       color: white;
+      font-weight: 100;
     }
     div.issue-wrapper {
       margin: 10px 10px 10px 10px;
       padding: 10px;
       border: 1px solid #616161;
+      p.issue-added-on {
+        color: #858585;
+        font-style: italic;
+        margin-top: 20px;
+      }
       h3.issue-title {
+        text-align: center;
         color: white;
         font-size: 2rem;
-        font-weight: 200;
+        font-weight: 600;
         margin: 0 0 10px 0;
       }
       p.issue-description {
         color: white;
         font-size: 1.3rem;
         line-height: 1.5;
+      }
+    }
+    form.close-issue-form {
+      button.close-issue {
+        padding: 10px 20px;
       }
     }
     // ^showissuepage
