--- a/public/style.scss
+++ b/public/style.scss
@@ -58,7 +58,7 @@ body {
         text-decoration: none;
       }
     }
-    // showIssuePage
+    // showIssuePage--------------------------------------
     a.back-button {
       text-decoration: none;
       align-self: flex-start;
@@ -106,7 +106,25 @@ body {
         padding: 10px 20px;
       }
     }
-    // ^showissuepage
+    div.add-comment-section {
+      width: 100%;
+      form {
+        display: flex;
+        flex-direction: column;
+        margin: 50px 10px 10px 10px;
+        textarea#comment {
+          resize: vertical;
+        }
+        button.submit-comment {
+          width: auto;
+          padding: 10px 5px;
+          margin: 10px 0 0 0;
+          width: 100px;
+        }
+      }
+    }
+
+    // ^showissuepage----------------------------------------------
     div.alert-danger {
       margin-bottom: -100px;
       margin-top: 100px;
