--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,8 @@ body {
   align-items: center;
 }
 body header {
-  margin-top: 10px;
+  padding: 10px 0 10px;
+  border-bottom: 1px solid #494949;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
