--- a/public/style.scss
+++ b/public/style.scss
@@ -11,7 +11,8 @@ body {
   flex-direction: column;
   align-items: center;
   header {
-    margin-top: 10px;
+    padding: 10px 0 10px;
+    border-bottom: 1px solid #494949;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
