--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,9 @@ body {
   align-items: center;
 }
 body header {
+  background-color: rgb(45, 45, 49);
   padding: 10px 0 10px;
+  margin-bottom: 10px;
   border-bottom: 1px solid #494949;
   display: flex;
   flex-direction: row;
@@ -32,6 +34,7 @@ body header nav ul li a {
   text-decoration: none;
 }
 body main {
+  background-color: rgb(45, 45, 49);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -123,34 +126,96 @@ body main div.alert-danger {
   font-size: 1.3rem;
 }
 body main form#create-issue {
+  display: flex;
+  flex-direction: column;
   margin-top: 20px;
   color: white;
+  width: 600px;
 }
 body main form#create-issue label {
   display: block;
-  margin-bottom: 5px;
+  margin-top: 10px;
 }
 body main form#create-issue input[type=text],
 body main form#create-issue textarea,
 body main form#create-issue select {
-  width: 100%;
+  width: 600px;
   padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #616161;
-  background-color: #424242;
-  color: white;
+  background-color: #858585;
+  color: rgb(49, 49, 49);
+}
+body main form#create-issue select {
+  color: rgb(255, 255, 255);
+  width: 25%;
 }
 body main form#create-issue textarea {
   resize: vertical;
 }
 body main form#create-issue button[type=submit] {
   width: auto;
-  background-color: #494949;
-  color: white;
+  background-color: #b8b8b8;
+  color: rgb(0, 0, 0);
   border: none;
   padding: 10px 20px;
   cursor: pointer;
+  width: 15%;
 }
 body main form#create-issue button[type=submit]:hover {
   background-color: #616161;
+}
+body main div.login-register {
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+}
+body main div.login-register div.register {
+  width: 600px;
+}
+body main div.login-register div.register form.registration-form {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 50px;
+}
+body main div.login-register div.register form.registration-form h2 {
+  color: white;
+}
+body main div.login-register div.register form.registration-form label {
+  color: white;
+  padding-top: 10px;
+}
+body main div.login-register div.register form.registration-form input {
+  font-size: 2rem;
+  background-color: #858585;
+  border: none;
+}
+body main div.login-register div.register form.registration-form button {
+  margin-top: 10px;
+  padding: 10px 40px;
+  width: 25%;
+  cursor: pointer;
+}
+body main div.login-register div.login form.login-form {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 50px;
+}
+body main div.login-register div.login form.login-form h2 {
+  color: white;
+}
+body main div.login-register div.login form.login-form label {
+  color: white;
+  padding-top: 10px;
+}
+body main div.login-register div.login form.login-form input {
+  font-size: 2rem;
+  background-color: #858585;
+  border: none;
+}
+body main div.login-register div.login form.login-form button {
+  margin-top: 10px;
+  padding: 10px 40px;
+  width: 25%;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
