--- a/public/style.scss
+++ b/public/style.scss
@@ -11,7 +11,9 @@ body {
   flex-direction: column;
   align-items: center;
   header {
+    background-color: rgb(45, 45, 49);
     padding: 10px 0 10px;
+    margin-bottom: 10px;
     border-bottom: 1px solid #494949;
     display: flex;
     flex-direction: row;
@@ -37,6 +39,7 @@ body {
     }
   }
   main {
+    background-color: rgb(45, 45, 49);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,6 +62,7 @@ body {
         text-decoration: none;
       }
     }
+
     // showIssuePage--------------------------------------
     a.back-button {
       text-decoration: none;
@@ -124,8 +128,8 @@ body {
         }
       }
     }
+    // ^showissuepage--
 
-    // ^showissuepage----------------------------------------------
     div.alert-danger {
       margin-bottom: -100px;
       margin-top: 100px;
@@ -133,23 +137,31 @@ body {
       font-size: 1.3rem;
     }
     form#create-issue {
+      display: flex;
+      flex-direction: column;
       margin-top: 20px;
       color: white;
+      width: 600px;
 
       label {
         display: block;
-        margin-bottom: 5px;
+        margin-top: 10px;
       }
 
       input[type="text"],
       textarea,
       select {
-        width: 100%;
+        width: 600px;
         padding: 8px;
         margin-bottom: 10px;
         border: 1px solid #616161;
-        background-color: #424242;
-        color: white;
+        background-color: #858585;
+        color: rgb(49, 49, 49);
+      }
+
+      select {
+        color: rgb(255, 255, 255);
+        width: 25%;
       }
 
       textarea {
@@ -158,16 +170,76 @@ body {
 
       button[type="submit"] {
         width: auto;
-        background-color: #494949;
-        color: white;
+        background-color: #b8b8b8;
+        color: rgb(0, 0, 0);
         border: none;
         padding: 10px 20px;
         cursor: pointer;
+        width: 15%;
 
         &:hover {
           background-color: #616161;
         }
       }
     }
+
+    //Register -------------------
+    div.login-register {
+      display: flex;
+      flex-direction: column;
+      padding-top: 50px;
+      div.register {
+        width: 600px;
+        form.registration-form {
+          display: flex;
+          flex-direction: column;
+          padding-bottom: 50px;
+          h2 {
+            color: white;
+          }
+          label {
+            color: white;
+            padding-top: 10px;
+          }
+          input {
+            font-size: 2rem;
+            background-color: #858585;
+            border: none;
+          }
+          button {
+            margin-top: 10px;
+            padding: 10px 40px;
+            width: 25%;
+            cursor: pointer;
+          }
+        }
+      }
+      div.login {
+        form.login-form {
+          display: flex;
+          flex-direction: column;
+          padding-bottom: 50px;
+          h2 {
+            color: white;
+          }
+          label {
+            color: white;
+            padding-top: 10px;
+          }
+          input {
+            font-size: 2rem;
+            background-color: #858585;
+            border: none;
+          }
+          button {
+            margin-top: 10px;
+            padding: 10px 40px;
+            width: 25%;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    // /register ---
   }
 }
