Tweak the styling for header nav links

--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,7 @@ body header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   min-width: 1000px;
 }
 body header div h1 {
@@ -30,8 +31,25 @@ body header nav ul {
 }
 body header nav ul li a {
   color: rgb(95, 131, 252);
-  padding: 0 5px;
+  margin: 0 10px;
   text-decoration: none;
+}
+body header nav ul li a:hover,
+body header nav ul li a:focus {
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgb(95, 131, 252);
+}
+body header nav ul li a.login-logout {
+  background-color: rgb(95, 131, 252);
+  color: #252525;
+  font-weight: 500;
+  padding: 3px 7px;
+  border-radius: 3px;
+}
+body header nav ul li a.login-logout:hover,
+body header nav ul li a.login-logout:focus {
+  border: none;
+  background-color: rgb(72, 102, 201);
 }
 body main {
   background-color: rgb(45, 45, 49);
