--- a/public/style.scss
+++ b/public/style.scss
@@ -159,6 +159,7 @@ body {
       }
     }
     div.all-comments-section {
+      width: 100%;
       margin-top: 5rem;
       div.single-comment-section {
         margin: 10px;
@@ -177,6 +178,8 @@ body {
         p.added-on {
           color: #858585;
           margin-bottom: 15px;
+          border-bottom: 1px solid #494949;
+          padding-bottom: 10px;
         }
         p.comment {
           color: white;
