--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  min-height: 100vh;
   background-color: rgb(45, 45, 49);
   display: flex;
   flex-direction: column;
@@ -304,4 +305,26 @@ body main div.login-register div.login form.login-form button {
   padding: 10px 40px;
   width: 25%;
   cursor: pointer;
+}
+body footer {
+  min-width: 1000px;
+  margin-top: auto;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  border-top: 1px solid #494949;
+}
+body footer div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+body footer div p {
+  color: #858585;
+}
+body footer div a {
+  text-decoration: none;
+  color: rgb(95, 131, 252);
+}
+body footer div span {
+  color: yellowgreen;
 }/*# sourceMappingURL=style.css.map */
