--- a/public/style.scss
+++ b/public/style.scss
@@ -6,6 +6,7 @@
 }
 
 body {
+  min-height: 100vh;
   background-color: rgb(45, 45, 49);
   display: flex;
   flex-direction: column;
@@ -330,5 +331,27 @@ body {
       }
     }
     // /register ---
+  }
+  footer {
+    min-width: 1000px;
+    margin-top: auto;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    border-top: 1px solid #494949;
+    div {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      p {
+        color: #858585;
+      }
+      a {
+        text-decoration: none;
+        color: rgb(95, 131, 252);
+      }
+      span {
+        color: yellowgreen;
+      }
+    }
   }
 }
